Code + fix: fixed images being stretched, tournaments not being created.

--- a/backend/static/css/ongoing-tourn.css
+++ b/backend/static/css/ongoing-tourn.css
@@ -63,7 +63,7 @@
 	margin-left: 10px;
     border-radius: 50%;
     width: 40px;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .name {
