--- a/backend/static/css/profile.css
+++ b/backend/static/css/profile.css
@@ -12,7 +12,7 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-	object-fit: contain;
+	object-fit: cover;
 }
 
 #change-info2 {
